--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ if (!doNotTrack) {
         </h1>
         <ul class="list pl0">
           <li class="b mv3">
-            <a class="f3 b pa1 black" href="post/">2021</a>
+            <a class="f3 b pa1 black" href="2021/">2021</a>
           </li>
 
         </ul>
